second validation check

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         </li>
                         <li>
                             <a class="dxExampleBox" href="https://www.nri.com/jp/journal/2018/0702">
-                                <img src="common/images/nri_journal20180702.png">
+                                <img src="common/images/nri_journal20180702.png" alt="">
                                 <div class="dxExampleTextTop">NRI JOURNAL</div>
                             </a>
                             <div class="dxExampleTextBottom">
@@ -134,7 +134,7 @@
                         </li>
                         <li>
                             <a class="dxExampleBox" href="https://www.nri.com/jp/people/pickup/kuwazu">
-                                <img src="common/images/nri_people.png">
+                                <img src="common/images/nri_people.png" alt="">
                                 <div class="dxExampleTextTop">NRI PEOPLE</div>
                             </a>
                             <div class="dxExampleTextBottom">
@@ -168,7 +168,7 @@
                         </li>
                         <li>
                             <a class="dxExampleBox" href="https://www.nri.com/jp/journal/2018/0418">
-                                <img src="common/images/nri_journal20180418.jpg">
+                                <img src="common/images/nri_journal20180418.jpg" alt="">
                                 <div class="dxExampleTextTop">NRI JOURNAL</div>
                             </a>
                             <div class="dxExampleTextBottom">
